--- a/VRChat/85/1319185.html
+++ b/VRChat/85/1319185.html
@@ -77,10 +77,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="satius"
-        data-product-category="33" data-product-id="1319185"
-        data-product-list="market_show" data-product-price="0"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="satius" data-product-category="33"
+        data-product-id="1319185" data-product-list="market_show"
+        data-product-price="0" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -102,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -123,13 +123,13 @@
                             <img alt="GIDEON/MUHAREM " class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3589959/icon_image/e1078d87-4c7c-49e7-99b6-06e88b815edd_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               GIDEON/MUHAREM
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           Punishment - Gottes Melodie EP
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -221,18 +221,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1319185"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "Punishment - Gottes Melodie EP | GIDEON/MUHAREM"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1319185"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "Punishment - Gottes Melodie EP | GIDEON/MUHAREM"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1319185"
@@ -242,7 +241,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -262,7 +261,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/37b5cb30-6505-46fd-809a-bcaa84b3f8ab/s/1319185/full/878ea59c-d232-4f2c-81a4-e99176313d8e.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -292,7 +292,7 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
+                        "js-market-item-detail-description">
                           <table class="tracks">
                             <tr>
                               <td class="track-number">
@@ -313,7 +313,7 @@
                               </td>
                             </tr>
                           </table>
-                          <p class="autolink">
+                          <p class="autolink u-text-wrap">
                             VRchatのコミュニティで色々触発されて作った曲のデモです。
                             1.Punishment 2.Gottes Melodie
                             ・個人的な範囲を超える目的で使用することを禁止します。
@@ -322,8 +322,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
