--- a/VRChat/15/1381915.html
+++ b/VRChat/15/1381915.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "ocutanbot" data-product-category="179" data-product-id=
-        "1381915" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="ocutanbot" data-product-category="179"
+        data-product-id="1381915" data-product-list="market_show"
         data-product-price="3450" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -102,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -123,13 +123,13 @@
                             <img alt="おきゅまーと" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4702640/icon_image/13ba9cd6-5009-493b-ba6d-96efa3f10f4c_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               おきゅまーと
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           おきゅぺん アートポーチ
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -225,17 +225,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1381915"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="おきゅぺん アートポーチ | おきゅまーと"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1381915"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="おきゅぺん アートポーチ | おきゅまーと"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1381915"
@@ -245,7 +244,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -292,8 +291,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             とある配信で描いたアートから生まれたポーチ。VRのすきまに暮らすペンギン、おきゅぺんです。リアルグッズだよ。裏側はおきゅみんロゴになってますっ
                             https://youtu.be/NqgJrY08Bx0?t=2658
                             おきゅぺん、かわいいって言ってくれるひとがいたので、まさかの公式グッズ化＞＜　VRChatで描いた配信をキャプチャしたものが元なので解像度低めです。
@@ -303,8 +302,8 @@
                             <div class="item-detail">
                               <p>
                                 <span class=
-                                "autolink">詳細なイメージは<a target=
-                                "_blank" href=
+                                "autolink u-text-wrap">詳細なイメージは<a target="_blank"
+                                href=
                                 "https://factory.pixiv.net/booth/products/pouch">こちら</a>をご覧ください。ファスナー：ホワイト<br>
 
                                 裏地：ベージュ<br></span>
@@ -337,7 +336,8 @@
                               </table>
                             </div>
                             <h4>
-                              <span class="autolink">発送予定日</span>
+                              <span class=
+                              "autolink u-text-wrap">発送予定日</span>
                             </h4>
                             <div class="item-detail">
                               <table class="condensed">
@@ -348,15 +348,14 @@
                                   <td class="is-right"></td>
                                 </tr>
                               </table><span class=
-                              "autolink"><small class=
+                              "autolink u-text-wrap"><small class=
                               "memo">※お振込を確認してから製造を開始するため、銀行・コンビニ決済でお支払いの際は記載されている発送予定日より遅くなる場合があります。</small></span>
                             </div>
                           </div>
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
